# space-invaders

./: .gitignore  CMakeLists.txt  README.md
dependencies/SDL/src/render/: SDL_render.c
dependencies/SDL_image/: CMakeLists.txt
src/: alphabet.c  alphabet.h  debugger_logger.c  debugger_logger.h  game.c  game.h  headers.h  list.c  list.h  main.c  ship.c  ship.h
